--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Witepace</title>
 </head>
 <body>
-    
+    <!--Header-->
+    <header style="background-image: url('img/background-home.jpg');">
+        <!--Div = divisão no html, server para agrupar um conjunto de itens-->
+        <!--container-->
+        <div class="container"> 
+            <!--Nav é usada para criação de menu navbar-->
+            <nav>
+                <a href="index.html">
+                    <img src="img/logo.png" alt="Logo">
+                </a>
+                <ul class="ul">
+                    <a href="index.html">Home</a>
+                    <a href="sobre.html">Sobre</a>
+                    <a href="servicos.html">Serviços</a>
+                    <a class="btn " href="contato.html">Contato</a>
+                </ul>
+            </nav>
+
+            <!--Section tag semantica do HTML5-->
+            <section class="banner">
+                <div class="banner-text">
+                    <h1>Whitepace</h1>
+                    <p>Construa sua marca, conquiste o mundo sem habilidades de código ou design necessárias</p>
+                    <a href="contato.html" class="btn ">Entre em contato</a>
+                </div>
+            </section>
+        </div>
+        <!--End container-->
+    </header>
+    <!--End Header-->
+
+
 </body>
 </html>
