UPDATE do index e css
parei no depoimento

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Link CSS-->
     <link rel="stylesheet" href="css/style.css">
     <title>Witepace</title>
 </head>
@@ -22,7 +25,7 @@
                     <a href="index.html">Home</a>
                     <a href="sobre.html">Sobre</a>
                     <a href="servicos.html">Serviços</a>
-                    <a class="btn " href="contato.html">Contato</a>
+                    <a class="btn" href="contato.html">Contato</a>
                 </ul>
             </nav>
 
@@ -31,14 +34,109 @@
                 <div class="banner-text">
                     <h1>Whitepace</h1>
                     <p>Construa sua marca, conquiste o mundo sem habilidades de código ou design necessárias</p>
-                    <a href="contato.html" class="btn ">Entre em contato</a>
+                    <a href="contato.html" class="btn animate-btn">Entre em contato </a>
                 </div>
             </section>
         </div>
         <!--End container-->
     </header>
     <!--End Header-->
+    <!-- Faca mais-->
+    <section class="faca-mais">
+        <div class="container">
+            <div class="faca-mais-text">
+                <h3>Faça mais com a Whitepace</h3>
+                <p>Criação de Websites, loja virtual, blogs para pequenas, médias e grandes empresas ter um site online
+                    nunca foi tão fácil
+                </p>
+                <a href="contato.html" class="btn animate-btn">Entrar em contato</a>
+            </div>
+            <div class="faca-mais-img">
+                <img src="img/img-1.png" alt="">
+            </div>
+        </div>
+        <!--End container-->
+    </section>
+    <!--End Faca mais-->
+
+      <!-- Faca mais 2-->
+      <section class="faca-mais">
+        <div class="container">
+            <div class="faca-mais-img">
+                <img src="img/img-2.png" alt="">
+            </div>
+
+            <div class="faca-mais-text">
+                <h3>Ter um website nunca foi tão fácil</h3>
+                <p>Agora com a nossa empresa ter um website é algo simplesmente fácil 
+                    basta entrar em contato e nós vamos desenvolver o seu website em tempo recorde para
+                    você começar a conquistar o mundo
+                </p>
+                <a href="contato.html" class="btn">Entrar em contato</a>
+            </div>
+        </div>
+        <!--End container-->
+    </section>
+    <!--End Faca mais 2-->
+
+    <!--depoimentos-->
+        <section class="depoimentos">
+            <div class="container">
+                <h3>Nossos Depoimentos</h3>
+                <p>Leia o que nossos clientes falam de nó para o mundo</p>
+            </div>
+            <div class="cards">
+
+                <!--Div card item 1-->
+                <div class="card-item">
+                    <img src="img/me.jpg" alt="Rayanne">
+                    <p class="nome-user">Henry Jones</p>
+                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
+                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
+                <div class="estrelas"></div>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <!--End card item 1-->
+
+                <!--Div card item 2-->
+                <div class="card-item">
+                    <img src="img/me.jpg" alt="Rayanne">
+                    <p class="nome-user">Henry Jones</p>
+                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
+                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
+                <div class="estrelas"></div>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <!--End card item 2-->
+
+                <!--Div card item 2-->
+                <div class="card-item">
+                    <img src="img/me.jpg" alt="Rayanne">
+                    <p class="nome-user">Henry Jones</p>
+                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
+                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
+                <div class="estrelas"></div>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                <!--End card item 3-->
+            </div>
+        </section>
+    <!--end depoimentos-->
 
 
+    <!-- ESTUDAR COM BASE DESSE VIDEO -->
+    <!--https://www.youtube.com/watch?v=LqqxZOec6HE&t=1246s-->
 </body>
 </html>
