update no depoimento

--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
                     <p class="nome-user">Henry Jones</p>
                     <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
                         iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas"></div>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star-o" aria-hidden="true"></i>
+                <div class="estrelas">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
                 </div>
                 <!--End card item 1-->
 
@@ -108,12 +109,14 @@
                     <p class="nome-user">Henry Jones</p>
                     <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
                         iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas"></div>
+                <div class="estrelas">
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star" aria-hidden="true"></i>
                 <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
+                
                 </div>
                 <!--End card item 2-->
 
@@ -123,12 +126,13 @@
                     <p class="nome-user">Henry Jones</p>
                     <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
                         iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas"></div>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star-o" aria-hidden="true"></i>
+                <div class="estrelas">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                </div>
                 </div>
                 <!--End card item 3-->
             </div>
