--- a/sobre.html
+++ b/sobre.html
@@ -44,135 +44,32 @@
         <!--End container-->
     </header>
     <!--End Header-->
-    <!-- Faca mais-->
-    <section class="faca-mais">
+    <!--Sobre-->
+    <section class="sobre">
         <div class="container">
-            <div class="faca-mais-text">
-                <h3>Faça mais com a Whitepace</h3>
-                <p>Criação de Websites, loja virtual, blogs para pequenas, médias e grandes empresas ter um site online
-                    nunca foi tão fácil
-                </p>
-                <a href="contato.html" class="btn animate-btn">Entrar em contato</a>
+            <div class="sobre-text">
+                <h3>Estamos nesse mercado mais de 8 anos</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo voluptas corporis fuga, 
+                provident, aut possimus quasi, harum repellendus dolorum cupiditate consectetur
+                dignissimos illo ipsa veniam voluptatem delectus a accusamus totam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo voluptas corporis fuga, 
+                provident, aut possimus quasi, harum repellendus dolorum cupiditate consectetur
+                dignissimos illo ipsa veniam voluptatem delectus a accusamus totam?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo voluptas corporis fuga, 
+                provident, aut possimus quasi, harum repellendus dolorum cupiditate consectetur
+                dignissimos illo ipsa veniam voluptatem delectus a accusamus totam?
+            </p>
+            <a href="contato.html" class="btn animate-btn">Entrar em contato</a>
             </div>
-            <div class="faca-mais-img">
-                <img src="img/img-1.png" alt="">
+
+            <div class="sobre-img">
+                <img src="img/sobre.jpg" alt="">
             </div>
         </div>
-        <!--End container-->
     </section>
-    <!--End Faca mais-->
-
-      <!-- Faca mais 2-->
-      <section class="faca-mais">
-        <div class="container">
-            <div class="faca-mais-img">
-                <img src="img/img-2.png" alt="">
-            </div>
-
-            <div class="faca-mais-text">
-                <h3>Ter um website nunca foi tão fácil</h3>
-                <p>Agora com a nossa empresa ter um website é algo simplesmente fácil 
-                    basta entrar em contato e nós vamos desenvolver o seu website em tempo recorde para
-                    você começar a conquistar o mundo
-                </p>
-                <a href="contato.html" class="btn">Entrar em contato</a>
-            </div>
-        </div>
-        <!--End container-->
-    </section>
-    <!--End Faca mais 2-->
-
-    <!--depoimentos-->
-        <section class="depoimentos">
-            <div class="container">
-                <h3>Nossos Depoimentos</h3>
-                <p>Leia o que nossos clientes falam de nós para o mundo</p>
-            </div>
-            <div class="cards">
-
-                <!--Div card item 1-->
-                <div class="card-item">
-                    <img src="img/me.jpg" alt="Rayanne">
-                    <p class="nome-user">Henry Jones</p>
-                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
-                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas">
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                </div>
-                <!--End card item 1-->
-
-                <!--Div card item 2-->
-                <div class="card-item">
-                    <img src="img/me.jpg" alt="Rayanne">
-                    <p class="nome-user">Henry Jones</p>
-                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
-                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                
-                </div>
-                <!--End card item 2-->
-
-                <!--Div card item 2-->
-                <div class="card-item">
-                    <img src="img/me.jpg" alt="Rayanne">
-                    <p class="nome-user">Henry Jones</p>
-                    <p class="depoimento-user">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores facilis, consectetur nulla dignissimos molestiae,
-                        iusto recusandae veniam obcaecati ipsum quibusdam fugit porro exercitationem velit aut, ratione soluta. Sit, dicta veniam!</p>
-                <div class="estrelas">
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                </div>
-                </div>
-                <!--End card item 3-->
-            </div>
-        </section>
-    <!--end depoimentos-->
-    <!--Clientes-->
-        <section class="clientes">
-            <div class="container">
-                <h3>Nossos Clientes</h3>
-                <p>Prestamos serviços para todo tipo de empresa ou projeto, olhe alguns dos nossos clientes</p>
-                <div>
-                    <img src="img/apple.png" alt="">
-                    <img src="img/microsoft.png" alt="">
-                    <img src="img/slack.png" alt="">
-                    <img src="img/google.png" alt="">
-                </div>
-            </div>
-        </section>
-    <!--Fim Clientes-->
-    <section class="faca-mais">
-        <div class="container">
-            <div class="faca-mais-text">
-                <h3>Tenha um website Seguro</h3>
-                <p>Nós trabalhamos com tecnologias atualizadas, rápidas e as mais seguras desse mercado, nós fazemos backup
-                    e manutenção no seu site em tempo recorde
-                </p>
-                <a href="contato.html" class="btn animate-btn">Entrar em contato</a>
-            </div>
-            <div class="faca-mais-img">
-                <img src="img/security.png" alt="">
-            </div>
-        </div>
-        <!--End container-->
-    </section>
-    <!--End Faca mais-->
-    <!--Footer-->
-    <footer class="footer">
+    <!--End Sobre-->
+       <!--Footer-->
+       <footer class="footer">
         <div class="container">
             <div class="links">
                 <a href="#"> <i class="fa fa-facebook"></i></a>
